# image-processor

tasks/admission/: admission.cpp
tasks/associative_operation/: associative_operation.cpp
tasks/cow/: cow_string.cpp  cow_string.h
tasks/image_processor/: CMakeLists.txt  application.cpp  application.h  bmp.cpp  bmp.h  command_parser.cpp  command_parser.h  filter_pipeline.cpp  filter_pipeline.h  filter_producing.cpp  filter_producing.h  filters.cpp  filters.h  image_processor.cpp  pipeline.cpp  pipeline.h  readme.md  test.cpp  tmatrix.h
tasks/mines/: minesweeper.cpp  minesweeper.h
tasks/multiplication/: multiplication.cpp
tasks/palindrome/: palindrome.cpp
tasks/password/: password.cpp
tasks/poly/: poly.cpp  poly.h
tasks/robot/: checkers_topology.cpp  checkers_topology.h  knight_topology.cpp  knight_topology.h  overflow_topology.cpp  overflow_topology.h  planar_topology.cpp  planar_topology.h  point.h  robot.cpp  topology.cpp  topology.h  world.cpp  world.h
tasks/scorer/: scorer.cpp
tasks/scorer2/: scorer.cpp  scorer.h
tasks/search/: search.cpp
tasks/search2/: search.cpp  search.h
tasks/sort_students/: sort_students.cpp
tasks/tests_checking/: tests_checking.cpp
tasks/unixpath/: unixpath.cpp
tasks/unixpath2/: unixpath.cpp  unixpath.h
tasks/word2vec/: word2vec.cpp
tasks/zip2/: zip.h
